# DemographicData

./: .gitgnore  README.md  geral_link.py  getAllData.py  hello.py  pyproject.toml  url.txt  url_data.py
data/base/: countries_description.csv
data/raw/: economic_gdp.json  economic_gdp_per_capita.json  economic_gdp_per_capita_growth.json  economic_population.json  indicator_data.csv  public_policies_education_expenditure.json  public_policies_military_expenditure.json  public_policies_spending_gov.json
notebooks/: data_quality.ipynb
notebooks/.ipynb_checkpoints/: data_quality-checkpoint.ipynb
src/: __init__.py  loader.py  loaderunicefData.py  reader.py  saver.py  url_data.py
src/.ipynb_checkpoints/: loader-checkpoint.py
src/webcraping/: descrition_country.py  unicef_scraper.py
