[project]
name = "unicefdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "geopandas>=1.1.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.5",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]
